@@ -1,3 +1,8 @@
+2009-07-09  Peter Bloomfield
+
+	* libbalsa/mailbox_mbox.c (libbalsa_mailbox_mbox_sync): check
+	for error in GMimeParser.
+
 2009-06-30  Peter Bloomfield
 
 	* configure.in: test for res_init.
